# latest-softwares

./: .fastapicloudignore  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  README.template.md  README_zh.md  README_zh.template.md  app.py  main.py  package-lock.json  package.json  packages.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: deploy-cn.yml  deploy-only.yml  deploy.yml  discover.yml  sync-metrics.yml  sync.yml
app_core/: __init__.py  app_builder.py  app_factory.py  editions.py  metrics.py  store.py
data/: latest.json  site_metrics.json
deploy/: cn_server.py  cn_server.service  nginx-latest-softwares.conf  server-setup.sh
docs/: intl-expansion-strategy.md
scripts/: add_bulk_apps.py  add_intl_200.py  add_more_apps.py  add_more_apps2.py  build_assets.mjs  build_web.py  check_sync_health.py  config_loader.py  discover_popular.py  editions.py  link_health_summary.py  link_utils.py  merge_results.py  migrate_packages.py  net.py  partition_ids.py  render.py  sync.py  update_vendor.py  validate_config.py  validate_links.py
scripts/fetchers/: qq.py  (+20 more)
tests/: test_app_builder.py  test_app_core.py  test_build_web.py  test_check_sync_health.py  test_discover_aggregate.py  test_discover_asset_infer.py  test_discover_categorize.py  test_discover_cli.py  test_discover_corroborate.py  test_discover_dedup.py  test_discover_generate.py  test_discover_github.py  test_discover_translate.py  test_editions.py  test_everything.py  test_github_release.py  test_http.py  test_latest_json_schema.py  test_links.py  test_main.py  test_official_fetchers.py  test_redirect_fetchers.py  test_render.py  test_sync.py  test_update_vendor.py  test_validate_config.py  test_wechat.py  test_workflow.py
web/: app.js  index.html  styles.css
(+20 files in other folders)
